# stapel-profiles

./: CHANGELOG.md  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  events.py  field_defs.py  gdpr.py  models.py  pyproject.toml  ruff.toml  serializers.py  urls.py  urls_v1.py  validators.py  views.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  errors.en.md  errors.ru.md  schema.json
fixtures/: languages.json
management/commands/: publish_all_profiles.py  sync_languages.py
migrations/: 0001_initial.py  0002_add_avatar_field.py  0003_add_display_name.py  0004_add_settings_fields.py  0005_add_location_id.py  0006_add_location_display_names.py  0007_add_initial_setup_passed.py  0008_add_language_is_active.py  0009_alter_display_name_max_length.py  0010_add_notification_prefs.py  0011_add_auto_detected_language.py  0012_add_rating_fields.py  0013_drop_orphan_rating_fields.py  0014_alter_profile_email_messages_and_more.py  0015_alter_profile_currency_code.py  0016_field_constructor_alpha_cut.py  0017_profile_display_name_profile_theme.py
schemas/emits/: profile.changed.json  profile.updated.json
tests/: test_api_profiles.py  test_api_relationships.py  test_api_unsubscribe.py  test_avatar_validation.py  test_contract.py  test_error_i18n.py  test_error_keys.py  test_events.py  test_field_defs.py  test_field_manifest.py  test_gdpr_actions.py  test_management_commands.py  test_models.py  test_public_api.py  test_serializers_extra.py  test_user_registered_action.py
translations/: .state.json  errors.ru.json
