[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-profiles"
version = "0.3.1"
description = "User profiles Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "profiles", "users", "social"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3"]
all = ["stapel-profiles[kafka]"]

[tool.setuptools]
package-dir = {"stapel_profiles" = "."}
packages = ["stapel_profiles", "stapel_profiles.management", "stapel_profiles.management.commands", "stapel_profiles.migrations", "stapel_profiles.tests"]

[tool.setuptools.package-data]
stapel_profiles = [
    "py.typed",
    "migrations/*.py",
    "migrations/**/*.py",
    "schemas/**/*.json",
    "fixtures/*.json",
    "fixtures/flags/*.svg",
]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"

[tool.coverage.run]
# Exclude test scaffolding and generated migrations from coverage metrics.
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
]
