[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-profiles"
version = "0.4.3"
description = "User profiles Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "profiles", "users", "social"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.13",
    # _codegen.py boots an eager Celery app before Django setup (contract
    # emission harness, exercised by test_contract.py's drift gate) — needs
    # celery installed as a real dependency, not just pulled in transitively.
    "celery>=5.3",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-profiles"
Repository = "https://github.com/usestapel/stapel-profiles"
Documentation = "https://github.com/usestapel/stapel-profiles#readme"
Changelog = "https://github.com/usestapel/stapel-profiles/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-profiles/issues"

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3"]
all = ["stapel-profiles[kafka]"]

[tool.setuptools]
package-dir = {"stapel_profiles" = "."}
packages = ["stapel_profiles", "stapel_profiles.management", "stapel_profiles.management.commands", "stapel_profiles.migrations"]

[tool.setuptools.package-data]
stapel_profiles = [
    "py.typed",
    "migrations/*.py",
    "migrations/**/*.py",
    "schemas/**/*.json",
    "fixtures/*.json",
    "fixtures/flags/*.svg",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"

[tool.coverage.run]
# Exclude test scaffolding and generated migrations from coverage metrics.
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
]
